CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PRJ binlog-sample)
PROJECT(${PRJ})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -o0 -DDEBUG=true -DNDEBUG=1")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -ggdb -DDEBUG=true -DNDEBUG=1")
SET(STANDALONE_BINLOG TRUE)

INCLUDE_DIRECTORIES("/usr/local/include/")
INCLUDE_DIRECTORIES(("../../../inc/"))
INCLUDE_DIRECTORIES(("../../../"))
INCLUDE_DIRECTORIES("/usr/local/share/include/")

## for openssl
INCLUDE_DIRECTORIES("/usr/local/opt/openssl@1.1/include/")
LINK_DIRECTORIES(/usr/local/opt/openssl@1.1/lib/)


ADD_LIBRARY(binlog_static STATIC IMPORTED)
SET_PROPERTY(TARGET binlog_static PROPERTY IMPORTED_LOCATION "/usr/local/lib/libbinlog.a")

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O0 -g")

SET(SOURCE_FILES
    ${CMAKE_SOURCE_DIR}/../../sample.cc
)
ADD_EXECUTABLE(${PRJ} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PRJ} pthread)
TARGET_LINK_LIBRARIES(${PRJ} ssl)
TARGET_LINK_LIBRARIES(${PRJ} crypto)

TARGET_LINK_LIBRARIES(${PRJ} binlog_static)

TARGET_LINK_LIBRARIES(${PRJ} z)
TARGET_LINK_LIBRARIES(${PRJ} dl)

IF (UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(${PRJ} rt)
ENDIF()




